--- a/BlazorWebSpaceTool/BlazorWebSpaceTool/Pages/Index.razor
+++ b/BlazorWebSpaceTool/BlazorWebSpaceTool/Pages/Index.razor
@@ -1,5 +1,12 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+@using BrctcSpace
+
+<h1>BRCTC Space Web Tool</h1>
 
 Welcome to your new app.
+
+
+@code{
+
+}
