Added Mutual Authentication

--- a/BlazorWebSpaceTool/BlazorWebSpaceTool/Pages/Experiment2020.razor
+++ b/BlazorWebSpaceTool/BlazorWebSpaceTool/Pages/Experiment2020.razor
@@ -5,7 +5,7 @@
 
 <h3>Experiment2020</h3>
 
-<button title="Get Data" @onclick="GetResult" class="btn btn-primary" />
+<button @onclick="GetResult" class="btn btn-primary">Get Data</button>
 
 <Vibe2020ResultList Items="Results"/>
 
