--- a/BlazorWebSpaceTool/BlazorWebSpaceTool/Shared/MainLayout.razor
+++ b/BlazorWebSpaceTool/BlazorWebSpaceTool/Shared/MainLayout.razor
@@ -1,15 +1,15 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="sidebar">
-    <NavMenu />
-</div>
-
-<div class="main">
-    <div class="top-row px-4">
-        @*<a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>*@
+<div class="main-grid">
+    <div class="header">
+        <NavMenu />
     </div>
 
-    <div class="content px-4">
+    <div class="content">
         @Body
+    </div>
+
+    <div class="footer">
+        @* Place important details about server health here *@
     </div>
 </div>
