--- a/BlazorWebSpaceTool/BlazorWebSpaceTool/Pages/Experiment2020.razor
+++ b/BlazorWebSpaceTool/BlazorWebSpaceTool/Pages/Experiment2020.razor
@@ -6,19 +6,14 @@
 @using System.Threading;
 @using System.Text.Json;
 @inject Vibe.VibeClient vibeClient;
+@inject Microsoft.JSInterop.IJSRuntime JS;
 
 <h2>Experiment2020</h2>
 
 <div style="margin-bottom: 10px;">
-    <button @onclick="ViewSingleData" class="btn btn-info" data-toggle="modal" data-target="#popup">
-        View single data point results json
-    </button>
-    <button @onclick="ViewServiceData" class="btn btn-info" data-toggle="modal" data-target="#popup">
-        View service call block results json
-    </button>
-    <button @onclick="ViewStreamData" class=" btn btn-info" data-toggle="modal" data-target="#popup">
-        View data stream results json
-    </button>
+
+
+
 </div>
 
 <div class="results">
@@ -26,6 +21,8 @@
         <h5>Single data point testing</h5>
         <br />
         <button disabled="@isRunning" @onclick="GetResult" class="btn btn-primary">Get Data</button>
+        <button @onclick="SaveSingleToJson" class="btn btn-info">Save To Json</button>
+        <button @onclick="SaveSingleToCsv" class="btn btn-info">Save To CSV</button>
         <GenericListTable Items="SingleResults">
             <TableHeader>
                 <th>Accelerometer</th>
@@ -35,7 +32,7 @@
             </TableHeader>
             <RowTemplate>
                 <td>@(context.AccelData != null ? string.Join(',', context.AccelData) : "None")</td>
-                <td>@(context.GyroData != null ?string.Join(',', context.GyroData) : "None")</td>
+                <td>@(context.GyroData != null ? string.Join(',', context.GyroData) : "None")</td>
                 <td>@context.CpuTemp</td>
                 <td>@context.TransactionTime</td>
             </RowTemplate>
@@ -46,6 +43,8 @@
         <h5>Service call data block testing</h5>
         <br />
         <button disabled="@isRunning" @onclick="GetBulkResults" class="btn btn-primary">Gather all Async Data</button>
+        <button @onclick="SaveBulkToJson" class="btn btn-info">Save To Json</button>
+        <button @onclick="SaveBulkToCsv" class="btn btn-info">Save To CSV</button>
         <GenericListTable Items="BulkResults">
             <TableHeader>
                 <th>Accelerometer</th>
@@ -69,6 +68,8 @@
         <br />
         <button disabled="@isRunning" @onclick="GetStreamResults" class="btn btn-primary btn-sm">Stream Data</button>
         <button disabled="@(!isRunning)" @onclick="Cancel" class="btn btn-primary btn-sm">Cancel Stream</button>
+        <button @onclick="SaveStreamToJson" class=" btn btn-info">Save To Json</button>
+        <button @onclick="SaveStreamToCsv" class="btn btn-info">Save To CSV</button>
         <GenericListTable Items="StreamResults">
             <TableHeader>
                 <th>Accelerometer</th>
@@ -88,10 +89,6 @@
 
 </div>
 
-<Popup ShowPopup="ShowPopup" ModelIDTag="popup" ClosePopup="handleClosePopup">
-    <PopupContents>@JsonifiedData</PopupContents>
-</Popup>
-
 
 @code {
 
@@ -101,9 +98,6 @@
 
     //Used to disable all buttons when streaming data. Not technically necessary, but better safe than sorry.
     public bool isRunning { get; set; } = false;
-    public bool ShowPopup { get; set; } = false;
-
-    public string JsonifiedData { get; set; }
 
     private CancellationTokenSource CancellationToken { get; set; }
 
@@ -189,78 +183,35 @@
         StateHasChanged();
     }
 
-    public void ViewSingleData()
+    public void SaveSingleToJson()
     {
-        var options = new JsonSerializerOptions
-        {
-            PropertyNamingPolicy = JsonNamingPolicy.CamelCase,
-            WriteIndented = true
-        };
-
-        options.Converters.Add(new HandleSpecialDoublesAsStrings());
-        JsonifiedData = JsonSerializer.Serialize(SingleResults, options);
-        ShowPopup = true;
-        StateHasChanged();
+        Utilities.SaveToJson(SingleResults, this.JS, "SingleResults");
     }
 
-    public void ViewServiceData()
+    public void SaveBulkToJson()
     {
-        var options = new JsonSerializerOptions
-        {
-            PropertyNamingPolicy = JsonNamingPolicy.CamelCase,
-            WriteIndented = true
-        };
-        options.Converters.Add(new HandleSpecialDoublesAsStrings());
-
-        JsonifiedData = JsonSerializer.Serialize(BulkResults, options);
-        ShowPopup = true;
-        StateHasChanged();
+        Utilities.SaveToJson(BulkResults, this.JS, "ServiceResults");
     }
 
-    public void ViewStreamData()
+    public void SaveStreamToJson()
     {
-        var options = new JsonSerializerOptions
-        {
-            PropertyNamingPolicy = JsonNamingPolicy.CamelCase,
-            WriteIndented = true
-        };
-        options.Converters.Add(new HandleSpecialDoublesAsStrings());
-
-        JsonifiedData = JsonSerializer.Serialize(StreamResults, options);
-        ShowPopup = true;
-        StateHasChanged();
+        Utilities.SaveToJson(StreamResults, this.JS, "StreamResults");
     }
 
-    public void handleClosePopup()
+    public void SaveSingleToCsv()
     {
-        ShowPopup = false;
-        JsonifiedData = "";
-
+        Utilities.SaveToCsv(SingleResults, this.JS, "SingleResults");
     }
 
-    //for handling NaN and Infinity doubles
-    private class HandleSpecialDoublesAsStrings : System.Text.Json.Serialization.JsonConverter<double>
+    public void SaveBulkToCsv()
     {
-        public override double Read(ref Utf8JsonReader reader, Type typeToConvert, JsonSerializerOptions options)
-        {
-            if (reader.TokenType == JsonTokenType.String)
-            {
-                return double.Parse(reader.GetString());
-            }
-            return reader.GetDouble();
-        }
-
-        public override void Write(Utf8JsonWriter writer, double value, JsonSerializerOptions options)
-        {
-            if (double.IsFinite(value))
-            {
-                writer.WriteNumberValue(value);
-            }
-            else
-            {
-                writer.WriteStringValue(value.ToString());
-            }
-        }
+        Utilities.SaveToCsv(BulkResults, this.JS, "ServiceResults");
     }
+
+    public void SaveStreamToCsv()
+    {
+          Utilities.SaveToCsv(StreamResults, this.JS, "StreamResults");
+    }
+
 
 }
